--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "buildive",
+  "name": "_buildive",
   "version": "1.0.1",
   "description": "generic interactive build tool",
   "keywords": [],
   "main": "src/js/index.js",
   "config": {
     "previewDir": "preview/2016",
-    "stageDir": "projects/2016"
+    "stageDir": "projects/2016",
+    "testDir": "/Users/alomax/Dropbox/cap"
   },
   "scripts": {
     "start": "npm run watch & npm run livereload & npm run connect",
     "connect": "http-server -o",
     "livereload": "livereload public",
-    "watch": "watch 'npm run mustache' src/views & watchify src/js/index.js -o public/app.js -v & npm run sass -- -w src/sass",
+    "watch": "watch 'npm run mustache' src/views & watchify src/js/index.js -o public/app.js -v & npm run sass -- -w src/sass/",
     "build:dev": "npm run browserify & npm run sass & npm run mustache",
     "build": "npm run build:dev && npm run minify && npm run mini:add",
     "browserify": "browserify src/js/index.js -o public/app.js -v",
@@ -20,12 +21,14 @@
     "mini:add": "sed -i '' 's/\"app.js\"/\"app.min.js\"/g; s/\"app.css\"/\"app.min.css\"/g' public/index.html",
     "sass": "node-sass src/sass/index.scss public/app.css",
     "mustache": "find src/views/partials -name '*.mustache' | xargs -I {} echo '-p' {} ' ' | xargs -I {} sh -c 'eval mustache {} package.json src/views/index.mustache > public/index.html'",
-    "connect-stage": "ssh -i $RSA_KEY $STAGE_NAME@$STAGE_IP",
     "preview:push": "npm version minor && npm run preview:mkdir && npm run preview:scp && npm run preview:open",
     "preview:push:patch": "npm version patch && npm run preview:mkdir && npm run preview:scp && npm run preview:open",
-    "preview:mkdir": "npm run connect-stage -- 'mkdir -p /var/www/interactives/$npm_package_config_previewDir/$npm_package_name'",
+    "preview:mkdir": "npm run stage:connect -- 'mkdir -p /var/www/interactives/$npm_package_config_previewDir/$npm_package_name'",
     "preview:scp": "scp -i $RSA_KEY -r public $STAGE_NAME@$STAGE_IP:/var/www/interactives/$npm_package_config_previewDir/$npm_package_name/v$npm_package_version/",
-    "preview:open": "open https://interactives-stage.devprogress.org/$npm_package_config_previewDir/$npm_package_name/v$npm_package_version/"
+    "preview:open": "open https://interactives-stage.devprogress.org/$npm_package_config_previewDir/$npm_package_name/v$npm_package_version/",
+    "stage:connect": "ssh -i $RSA_KEY $STAGE_NAME@$STAGE_IP",
+    "stage:push": "scp -i $RSA_KEY -r public/ $STAGE_NAME@$STAGE_IP:/var/www/interactives/$npm_package_config_stageDir/$npm_package_name/",
+    "stage:commit": "git add $npm_package_config_testDir/$npm_package_name && git commit -m 'v$npm_package_version update'"
   },
   "author": "Andrew Lomax",
   "license": "ISC",
