added remote staging and git adding/commiting

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "preview:scp": "scp -i $RSA_KEY -r public $STAGE_NAME@$STAGE_IP:/var/www/interactives/$npm_package_config_previewDir/$npm_package_name/v$npm_package_version/",
     "preview:open": "open https://interactives-stage.devprogress.org/$npm_package_config_previewDir/$npm_package_name/v$npm_package_version/",
     "stage:connect": "ssh -i $RSA_KEY $STAGE_NAME@$STAGE_IP",
-    "stage:push": "scp -i $RSA_KEY -r public/ $STAGE_NAME@$STAGE_IP:/var/www/interactives/$npm_package_config_stageDir/$npm_package_name/",
-    "stage:commit": "npm run stage:connect -- 'cd /var/www/interactives ; git add $npm_package_config_stageDir/$npm_package_name ; git commit -m \"$npm_package_name v$npm_package_version\"'"
+    "stage:push": "npm run stage:mkdir && npm run stage:scp && npm run stage:open",
+    "stage:mkdir": "npm run stage:connect -- 'mkdir -p /var/www/interactives/$npm_package_config_stageDir/$npm_package_name'",
+    "stage:scp": "scp -i $RSA_KEY -r public/* $STAGE_NAME@$STAGE_IP:/var/www/interactives/$npm_package_config_stageDir/$npm_package_name/",
+    "stage:commit": "npm run stage:connect -- 'cd /var/www/interactives && git add $npm_package_config_stageDir/$npm_package_name && git commit -m \"$npm_package_name v$npm_package_version\" -q'",
+    "stage:open": "open https://interactives-stage.devprogress.org/$npm_package_config_stageDir/$npm_package_name/"
   },
   "author": "Andrew Lomax",
   "license": "ISC",
